--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/vercel": "^7.6.0",
+    "@vercel/analytics": "^1.2.2",
     "astro": "^4.8.3"
   }
 }
